// 使用proto3语法，默认proto2
syntax = "proto3";

// 是否需要生成的类拆分为多个
option java_multiple_files = true;
// 生成的类所属的层级
option java_package = "ucenter.grpc.pageConfig";
option java_outer_classname = "PageConfigProto";
option objc_class_prefix = "UCENTER";

// 定义包名，避免命名冲突
package ucenter;

// 定义服务
service PageConfig {
  rpc savePageConfig (SavePageConfigRequest) returns (SavePageConfigResponse) {}
  rpc getPageConfig (GetPageConfigRequest) returns (GetPageConfigResponse) {}
}

// 结构化数据：使用message定义。
// 字段类型 字段名 = 字段编号;
message GetPageConfigRequest {
  string clientCode = 1;
}

message GetPageConfigResponse {
  repeated PageConfigSchema pageConfigs = 1;
}

message SavePageConfigRequest {
  OperatorSchema curUserInfo = 1;
  string clientCode = 2;
  repeated PageConfigSchema pageConfigs = 3;
}

message SavePageConfigResponse {
  int32 count = 1;
}

message Tag {
  string key = 1;
  string value = 2;
}

message OperatorSchema {
  string userCode = 1;
  string realName = 2;
}

message PageConfigSchema {
  string pageConfigCode = 1;
  string clientCode = 2;
  string name = 3;
  string path = 4;
  repeated string method = 5;
  bool auth = 6;
  bool clientAuth = 7;
  repeated string privs = 8;
  repeated string clientPrivs = 9;
  int32 status = 10;
  repeated Tag tags = 11;
  uint32 orderNum = 12;
  string clientName = 13;
}